# Morpion

./: README.md
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/ressources/icons/: icon.rc  icon.res
